# paste.misterio.me

./: .build.yml  .gitattributes  .gitignore  .gitmodules  .hydra.json  Cargo.toml  README.md  Rocket.toml  build.rs  default.nix  flake.nix  shell.nix
.cargo/: config.toml
assets/: .gitignore  style.css  style.scss
cli/: .build.yml  Cargo.toml  commands.md  default.nix  flake.nix  hm-module.nix  module.nix
cli/src/: client.rs  lib.rs  main.rs  session.rs
cli/src/operations/: auth.rs  delete.rs  download.rs  list.rs  mod.rs  upload.rs
cli/src/schema/: mod.rs  paste.rs
db/: 0-init.sql  0.3.0.sql
nix/: cli-module.nix  cli.nix  server-module.nix  server.nix  shell.nix  tests.nix
scss/: highlight.scss  style.scss
scss/pico/content/: _code.scss  _form.scss  _typography.scss
scss/pico/themes/: default.scss
scss/pico/themes/default/: _dark.scss  _light.scss  _styles.scss
scss/pico/themes/misterio/: _colors.scss  _light.scss  _styles.scss
server/: Cargo.toml  Rocket.toml  build.rs  default.nix  module.nix  nixos-module.nix
server/db/: 0.3.0.sql  1.0.0.sql  1.3.0.sql
server/scss/: colors.scss  highlight.scss  style.scss
server/scss/pico/content/: _button.scss
server/src/: asset.rs  error.rs  lib.rs  main.rs  syntax.rs
server/src/routes/: mod.rs  paste.rs  user.rs
server/src/routes/account/: keys.rs  logout.rs  register.rs
server/src/schema/: api_key.rs  mod.rs  paste.rs  session.rs
server/syntaxes/ASP-VB-NET/: ASP-VB-NET.sublime-syntax
server/syntaxes/Apex/: Apex.sublime-syntax
server/syntaxes/CMake/: CMake Listfile.sublime-syntax
server/syntaxes/COBOL/: ACUCOBOL.sublime-syntax  OpenCOBOL.sublime-syntax  jcl.sublime-syntax
server/syntaxes/Coq/: Coq.sublime-syntax
server/syntaxes/Cuda/: cuda-c++.sublime-syntax
server/syntaxes/Dart/: Dart Doc Comments.sublime-syntax  Dart.sublime-syntax
server/syntaxes/Dockerfile/: Dockerfile.sublime-syntax
server/syntaxes/DreamMaker/: DM.sublime-syntax
server/syntaxes/F#/: F Sharp.sublime-syntax
server/syntaxes/GraphQL/: GraphQL.sublime-syntax
server/syntaxes/JavaScript/: React.sublime-syntax
server/syntaxes/MSBuild/: MSBuild.sublime-syntax
server/syntaxes/Man/: Man.sublime-syntax
server/syntaxes/Mediawiki/: Mediawiki.sublime-syntax
server/syntaxes/Move/: Move.sublime-syntax
server/syntaxes/Ninja/: Ninja.sublime-syntax
server/syntaxes/Plist/: Property List.sublime-syntax
server/syntaxes/PowerShell/: PowerShellSyntax.sublime-syntax
server/syntaxes/Protobuf/: Protobuf.sublime-syntax
server/syntaxes/Rust/: RustEnhanced.sublime-syntax
server/syntaxes/Smalltalk/: SmallTalk.sublime-syntax
server/syntaxes/Stylus/: Stylus.sublime-syntax
server/syntaxes/TOML/: TOML.sublime-syntax
server/syntaxes/VHDL/: vhdl.tmLanguage.sublime-syntax
server/syntaxes/Verilog/: verilog.tmLanguage.sublime-syntax
server/templates/: base.html.tera  create.html.tera  error.html.tera  keys.html.tera  login.html.tera  logout.html.tera  paste.html.tera  pastes.html.tera  register.html.tera  sessions.html.tera
src/: common.rs  database.rs  error.rs  lib.rs  main.rs  style.rs  tera.rs
src/routes/: login.rs  logout.rs  mod.rs  paste.rs  register.rs  user.rs
src/routes/account/: login.rs  logout.rs  mod.rs  register.rs  sessions.rs
src/schema/: api_key.rs  mod.rs  paste.rs  session.rs  user.rs
syntaxes/ASP-VB-NET/: HTML-ASP-VB-NET.sublime-syntax
syntaxes/CMake/: CMake Cache.sublime-syntax
syntaxes/COBOL/: COBOL.sublime-syntax
syntaxes/CapnProto/: Capn Proto.sublime-syntax
syntaxes/Cg/: Cg.sublime-syntax
syntaxes/Clojure/: Clojure.sublime-syntax
syntaxes/Cron/: Crontab.sublime-syntax
syntaxes/Elm/: Elm.sublime-syntax
syntaxes/Fish/: fish.sublime-syntax
syntaxes/Forth/: Forth.sublime-syntax
syntaxes/GLSL/: ESSL.sublime-syntax
syntaxes/HLSL/: HLSL.sublime-syntax
syntaxes/Java/: JavaDoc.sublime-syntax
syntaxes/JavaScript/: JavaScript.sublime-syntax  embed.sublime-syntax
syntaxes/LESS/: LESS.sublime-syntax
syntaxes/Maven/: Maven POM.sublime-syntax
syntaxes/Postscript/: Postscript.sublime-syntax
syntaxes/Python/: Python.sublime-syntax
syntaxes/Rails/: Ruby Haml.sublime-syntax
syntaxes/SASS/: Sass.sublime-syntax
syntaxes/Starlark/: starlark.sublime-syntax
syntaxes/Thrift/: Thrift.sublime-syntax
syntaxes/VimL/: VimL.sublime-syntax
templates/: base.html.tera  create.html.tera  error.html.tera  home.html.tera  login.html.tera  logout.html.tera  paste.html.tera  pastes.html.tera  register.html.tera  sessions.html.tera  user.html.tera
tests/: default.nix
