[package]
name = "paste-misterio-me"
description = "Paste service"
version = "0.1.4"
authors = [ "Gabriel Fontes <eu@misterio.me>" ]
readme = "README.md"
edition = "2018"
license = "Unlicense"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_async_compression = "0.1"
rocket-post-as-delete = "0.1"
rocket-assets-fairing = "0.1"
normpath = "0.3"
rand = "0.8"
rust-argon2 = "1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = [ "json", "secrets" ]
[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = [ "tera" ]
[dependencies.rocket_db_pools]
version = "0.1.0-rc"
features = [ "deadpool_postgres" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.postgres-types]
version = "0.2"
features = [ "with-chrono-0_4" ]

[build-dependencies.grass]
version = "0.10"
default-features = false

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket" }
