[package]
name = "paste-misterio-me"
description = "Paste service"
version = "1.3.0"
authors = [ "Gabriel Fontes <eu@misterio.me>" ]
readme = "README.md"
repository = "https://sr.ht/~misterio/paste.misterio.me"
homepage = "https://paste.misterio.me"
edition = "2018"
license = "AGPL-3.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket-post-as-delete = "0.1"
rand = "0.8"
rust-argon2 = "1.0"
chrono-humanize = "0.2"
syntect = "4.6"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = [ "json", "secrets", "uuid" ]
[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = [ "tera" ]
[dependencies.rocket_db_pools]
version = "0.1.0-rc.1"
features = [ "deadpool_postgres" ]

[dependencies.uuid]
version = "1.1"
features = [ "serde", "v4"]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.postgres-types]
version = "0.2"
features = [ "with-chrono-0_4", "with-uuid-1" ]

[dependencies.percent-encoding]
version = "2.1"

[build-dependencies]
syntect = "4.6"

[build-dependencies.grass]
version = "0.10"
default-features = false
