[package]
name = "pmis"
description = "Companion CLI tool for paste.misterio.me"
version = "1.6.0"
authors = [ "Gabriel Fontes <eu@misterio.me>" ]
readme = "../README.md"
repository = "https://github.com/misterio77/paste.misterio.me"
homepage = "https://paste.misterio.me"
edition = "2018"
license = "GPL-3.0-or-later"
rust-version = "1.64.0"

[dependencies.tokio]
version = "1.28"
features = ["full"]

[dependencies.clap]
version = "4.2"
features = ["derive", "wrap_help", "env"]

[dependencies.reqwest]
version = "0.11"
features = [ "json" ]

[dependencies.uuid]
version = "1.3"
features = [ "serde" ]

[dependencies.directories]
version = "5.0"

[dependencies.anyhow]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.chrono-humanize]
version = "0.2"

[dependencies.atty]
version = "0.2"

[dependencies.bat]
version = "0.23"
default-features = false
features = ["regex-onig", "paging"]

[dependencies.clap_complete]
version = "4.2"
