[package]
name = "paste-misterio-me"
description = "Paste service"
version = "1.6.1"
authors = [ "Gabriel Fontes <hi@m7.rs>" ]
readme = "README.md"
repository = "https://github.com/misterio77/paste.misterio.me"
homepage = "https://paste.misterio.me"
edition = "2018"
license = "AGPL-3.0-or-later"
build = "build.rs"
rust-version = "1.64.0"
default-run = "paste-misterio-me"

[dependencies]
rocket-post-as-delete = "0.1"
rand = "0.8"
rust-argon2 = "1.0"
chrono-humanize = "0.2"
syntect = "5.0"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = [ "json", "secrets", "uuid" ]
[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = [ "tera" ]
[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = [ "deadpool_postgres" ]

[dependencies.uuid]
version = "1.3"
features = [ "serde", "v4"]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.postgres-types]
version = "0.2"
features = [ "with-chrono-0_4", "with-uuid-1" ]

[dependencies.percent-encoding]
version = "2.2"

[build-dependencies]
syntect = "5.0"

[build-dependencies.grass]
version = "0.13"
default-features = false
